# dimppl

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json
desktop/: .gitignore  package-lock.json  package.json  vite.config.js
desktop/src/: app.css  formatUtil.ts  main.tsx  preflight.css  routeDefinitions.ts  timeUtil.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/2023-08-26-201428_create_initial_models/: down.sql  up.sql
desktop/src-tauri/migrations/2024-12-29-195609_add_deleted_at_to_podcasts/: down.sql  up.sql
desktop/src-tauri/src/: commands.rs  context_menus.rs  database.rs  directories.rs  errors.rs  frontend_change_tracking.rs  lib.rs  main.rs  main_menu.rs  menu_support.rs  models.rs  navigation.rs  player.rs  progress_updater.rs  schema.rs  show_file_in_folder.rs
desktop/src-tauri/src/backend/: endpoints.rs  models.rs
desktop/src-tauri/src/models/: episode.rs  episode_downloads.rs  podcast.rs
desktop/src-tauri/src/player/: new_player.rs  output.rs  resampler.rs
desktop/src/backend/: configApi.ts  podcastApi.ts  podcastUtil.ts
desktop/src/components/: Modal.tsx  PrettyButton.tsx  RootDiv.tsx
desktop/src/routes/: DownloadContextProvider.tsx  RootRouteComponent.tsx
desktop/src/routes/app/: Icon.tsx  ImageOverlayButton.tsx  ToolbarButton.tsx
desktop/src/routes/app/controls/: PlayerControlsTopBar.tsx  ToolbarIconButton.tsx  VolumeSlider.tsx
desktop/src/routes/app/episode/: EpisodeRoute.tsx
desktop/src/routes/app/home/: HomeRoute.tsx  LastPlayedCard.tsx  ListenHistoryTileList.tsx  RecentEpisodesList.tsx  shared.tsx
desktop/src/routes/app/manage/: DownloadsRoute.tsx  PodcastsRoute.tsx  SettingsRoute.tsx  shared.tsx
desktop/src/routes/app/podcast/: BackButton.tsx  EpisodeListItem.tsx  PlayButton.tsx  PodcastDetailHeader.tsx  PodcastEpisodesList.tsx  PodcastRoute.tsx
desktop/src/routes/app/sidebar/: DownloadMonitor.tsx  ImportPodcastButton.tsx  Sidebar.tsx  SyncPodcastsButton.tsx
desktop/src/routes/onboarding/: OnboardingDeviceNameRoute.tsx  components.ts
dimppl-desktop-tauri/: package-lock.json  test.db
dimppl-desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  test.db
dimppl-desktop-tauri/src-tauri/migrations/2023-08-26-201428_create_initial_models/: up.sql
dimppl-desktop-tauri/src-tauri/src/: commands.rs  config.rs  database.rs  directories.rs  errors.rs  main.rs  models.rs  schema.rs  state.rs
dimppl-desktop-tauri/src-tauri/src/models/: podcast.rs
dimppl-desktop-tauri/src/lib/: models.ts
dimppl-desktop-tauri/src/routes/: +page.svelte
dimppl-server/: Cargo.toml
dimppl-server/migrations/2023-08-19-222201_create_users/: up.sql
dimppl-server/migrations/2023-08-19-223704_create_user_devices/: up.sql
dimppl-server/migrations/2023-08-21-005112_create_user_devices/: down.sql
dimppl-server/src/: app.rs  database.rs  error_handling.rs  main.rs  models.rs  schema.rs  state.rs
dimppl-server/src/endpoints/: create_device.rs  create_user.rs  mod.rs
dimppl-server/src/models/: user.rs  user_device.rs
ios/Dimppl/Dimppl/: ContentView.swift  DimpplApp.swift  Item.swift
ios/Dimppl/Dimppl.xcodeproj/: project.pbxproj
ios/Dimppl/Dimppl.xcodeproj/project.xcworkspace/xcuserdata/dianahorbatiuk.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Dimppl/Dimppl.xcodeproj/xcuserdata/dianahorbatiuk.xcuserdatad/xcschemes/: xcschememanagement.plist
migrations/2023-08-19-223704_create_user_devices/: down.sql
migrations/2023-08-21-005112_create_user_devices/: up.sql
migrations/2023-10-01-155838_podcasts_and_episodes/: up.sql
server/: Cargo.toml  Dockerfile  README.md  fly.toml
server/migrations/2023-10-01-155838_podcasts_and_episodes/: down.sql
server/migrations/2023-10-02-161932_track_deletions/: down.sql  up.sql
server/src/: database.rs  error_handling.rs  main.rs  models.rs  state.rs  sync_lock.rs
server/src/endpoints/: create_user.rs  mod.rs  submit_progress.rs  sync_state.rs  websocket.rs
server/src/models/: episode.rs  podcast.rs  user.rs  user_device.rs
shared/: Cargo.toml
shared/src/: lib.rs  progress.rs  sync.rs
src/: app.css  app.rs  error_handling.rs  main.rs  main.tsx  models.rs  routeDefinitions.ts  schema.rs  state.rs  websocket.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  commands.rs  config.rs  database.rs  directories.rs  environment.rs  errors.rs  extensions.rs  frontend_change_tracking.rs  main.rs  main_menu.rs  menus.rs  models.rs  native_context_menus.rs  player.rs  schema.rs
src-tauri/src/backend/: endpoints.rs  models.rs
src-tauri/src/models/: episode.rs  episode_downloads.rs  podcast.rs
src-tauri/src/player/: new_player.rs  output.rs
src/backend/: configApi.ts  contextMenu.ts  podcastApi.ts
src/components/: Modal.tsx  RootDiv.tsx
src/endpoints/: create_podcast.rs  mod.rs  sync_state.rs
src/models/: podcast.rs  user.rs  user_device.rs
src/routes/: DownloadContextProvider.tsx  PlayerContextProvider.tsx  RootRouteComponent.tsx
src/routes/app/: AppRoute.tsx  DownloadMonitor.tsx  IconButton.tsx  ImportPodcastButton.tsx  PlayerControlsTopBar.tsx  Sidebar.tsx  SyncPodcastsButton.tsx  ToolbarButton.tsx  ToolbarIconButton.tsx  VolumeSlider.tsx
src/routes/app/controls/: PlayerControlsTopBar.tsx  VolumeSlider.tsx
src/routes/app/episode/: EpisodeRoute.tsx
src/routes/app/home/: HomeRoute.tsx  LastPlayedCard.tsx  ListenHistoryTileList.tsx  RecentEpisodesList.tsx
src/routes/app/manage/: DownloadsRoute.tsx  PodcastsRoute.tsx  SettingsRoute.tsx  shared.tsx
src/routes/app/podcast/: DownloadEpisodeButton.tsx  EpisodeListItem.tsx  PodcastEpisodesList.tsx  PodcastRoute.tsx
src/routes/app/settings/: SettingsRoute.tsx
src/routes/app/sidebar/: Sidebar.tsx  SyncPodcastsButton.tsx
src/routes/onboarding/: OnboardingDeviceNameRoute.tsx  OnboardingUserAccountRoute.tsx  components.ts
