[package]
name = "dimppl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
bb8 = "0.8.1"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.3.2", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
hyper = { version = "0.14.27", features = ["full"] }
mime = "0.3.17"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
serial_test = "2.0.0"
tower = { version = "0.4.13", features = ["util"] }
