[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = ["macos-private-api"] }
souvlaki = { git = "https://github.com/dhbtk/souvlaki.git" }
diesel = { version = "2.1.1", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
chrono = { version = "0.4.26", features = ["serde"] }
bb8 = "0.8.1"
directories = "5.0.1"
url = "2.4.0"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
toml = "0.7.6"
gethostname = "0.4.3"
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["json"] }
rss = { version = "2.0.6", features = ["chrono", "atom"] }
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.32.0", features = ["bytes", "fs", "full"] }
futures = "0.3.28"
rfc822_sanitizer = "0.3.6"
tauri-plugin-window = "2.0.0-alpha.1"
tauri-plugin-os = "2.0.0-alpha.1"
derive_more = "0.99.17"
mime2ext = "0.1.52"
futures-util = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rodio = { version = "0.17.1", features = ["symphonia-isomp4", "symphonia-aac"] }
send_wrapper = "0.6.0"
lofty = "0.15.0"
cpal = "0.15.2"
symphonia = { version = "0.5.3", features = ["all-codecs"] }
rb = "0.4.1"
rubato = "0.14.1"
arrayvec = "0.7.4"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
