[package]
name = "dimppl"
version = "0.1.0"
description = "Diana's Multiplatform Podcast Player"
authors = ["you"]
license = ""
repository = ""
default-run = "dimppl"
edition = "2021"
rust-version = "1.60"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
tauri = { version = "2.1.1", features = ["macos-private-api", "unstable"] }
souvlaki = { git = "https://github.com/dhbtk/souvlaki.git" }
diesel = { version = "2.2.6", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
chrono = { version = "0.4.39", features = ["serde"] }
bb8 = "0.9.0"
directories = "5.0.1"
url = "2.5.4"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
toml = "0.8.19"
gethostname = "0.5.0"
anyhow = "1.0.95"
reqwest = { version = "0.12.10", features = ["json", "stream"] }
rss = { version = "2.0.11", features = ["chrono", "atom"] }
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { version = "1.42.0", features = ["bytes", "fs", "full"] }
futures = "0.3.31"
rfc822_sanitizer = "0.3.6"
tauri-plugin-os = "2.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
mime2ext = "0.1.53"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rodio = { version = "0.20.1", features = ["symphonia-isomp4", "symphonia-aac"] }
send_wrapper = "0.6.0"
lofty = "0.21.1"
cpal = "0.15.3"
symphonia = { version = "0.5.4", features = ["all-codecs"] }
rb = "0.4.1"
rubato = "0.16.1"
arrayvec = "0.7.4"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
dimppl-shared = { path = "../../shared" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
