[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["api-all"] }
souvlaki = { git = "https://github.com/dhbtk/souvlaki.git" }
diesel = { version = "2.1.1", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.3.2", features = ["bb8"] }
chrono = { version = "0.4.26", features = ["serde"] }
bb8 = "0.8.1"
directories = "5.0.1"
url = "2.4.0"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
toml = "0.7.6"
gethostname = "0.4.3"
anyhow = "1.0.75"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
